[tool.poetry]
name = "status window"
version = "0.1.0"
description = "Status Window - Gamification of Life"
authors = ["Akshat Pande <mail@pandeakshat.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"
pandas = "^2.2.2"
gspread = "^6.1.2"
oauth2client = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
